syntax = "proto3";

option go_package = "codenamecreator";

message NameRequest {
    string category = 1;
}

message NameResult {
    string name = 1;
}

service CodenameCreator {
    rpc KeepGettingCodenames(stream NameRequest) returns (stream NameResult) {}
}